--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,17 +5,13 @@
 
 body {
   margin: 0;
+  height: 100%;
+  background-color: #f5f5f5;
 }
 
 .contain {
-  max-width: 666px;
+  max-width: 600px;
   margin: 0 auto;
-}
-
-@media print {
-  .no-print {
-    display: none !important;
-  }
 }
 
 fieldset, input, button {
@@ -24,4 +20,34 @@ fieldset, input, button {
   border: 0;
   outline: 0;
   width: 100%;
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+}
+
+fieldset {
+  padding: 8px 0px;
+}
+
+@media print {
+  * {
+    font-size: 12px;
+    color: #333333 !important;
+  }
+
+  .no-print {
+    display: none !important;
+  }
+
+  #nameplate {
+    padding: 0px;
+    #name {
+      font-size: 50px !important;
+      line-height: 50px !important;
+    }
+  }
+
+  #contacts {
+    padding: 0px
+  }
 }
