--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,15 +14,16 @@ body {
   margin: 0 auto;
 }
 
-fieldset, input, button {
+fieldset, input, textarea, button {
   appearance: none;
   -webkit-appearance: none;
   border: 0;
   outline: 0;
   width: 100%;
-  padding: 0;
+  padding: 8px;
   margin: 0;
   font-size: 18px;
+  border-radius: 2px;
 }
 
 fieldset {
@@ -49,5 +50,12 @@ fieldset {
 
   #contacts {
     padding: 0px
+  }
+}
+
+button:disabled {
+  background-color: red;
+  &:hover {
+    cursor: no-drop;
   }
 }
