add color picker, start repeater

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -55,8 +55,12 @@ fieldset {
 }
 
 button:disabled {
-  background-color: red;
+  background-color: #f05d48;
   &:hover {
     cursor: no-drop;
   }
+}
+
+.block-picker {
+  width: 100% !important;
 }
