begin project collapse panels

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,9 @@
 * {
-  font-family: 'Tahoma', 'Arial', sans-serif;
-  color: #525b60;
+  color: #888e92;
   box-sizing: border-box;
+  font-family: fira-sans-2, sans-serif;
+  font-style: normal;
+  font-weight: 600;
 }
 
 body {
