color picker finally syncs with saved themeColor

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -84,7 +84,7 @@ button:disabled {
   transition: height 0.2s ease-out;
 }
 .rc-collapse > .rc-collapse-item {
-  border-top: 1px solid #d9d9d9;
+  border-top: 1px solid #2f383d;
 }
 .rc-collapse > .rc-collapse-item:first-child {
   border-top: none;
